force-app/main/default/objects/tc9_imp__Imported_Assignment__c/tc9_imp__Imported_Assignment__c.object-meta.xml
<CustomObject>
    <label>Imported Assignment</label>
    <nameField>
        <label>Imported Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imported Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>