force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Alternative_Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Alternative_Timesheet_Approver__c</fullName>
    <label>Alternative Timesheet Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>