force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Assignment_Rate_Template__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Assignment_Rate_Template__c</fullName>
    <label>Assignment Rate Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>