force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Client_Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Client_Hiring_Manager__c</fullName>
    <label>Client Hiring Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>