force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>