force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__External_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__External_Id__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>