force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Imported_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Imported_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imported Record</label>
    <referenceTo>tc9_imp__Timesheet_Import__c</referenceTo>
    <relationshipLabel>Imported Assignments</relationshipLabel>
    <relationshipName>Imported_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>