force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Interpretation_Rule__c</fullName>
    <label>Interpretation Rule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>