force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Invoice_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Invoice_Tax_ID__c</fullName>
    <label>Invoice Tax ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>