force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Invoice_To_Account__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Invoice_To_Account__c</fullName>
    <label>Invoice To Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>