force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Invoice_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Invoice_To_Contact__c</fullName>
    <label>Invoice To Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>