force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Payee__c</fullName>
    <label>Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>