force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Public_Holiday_Calendar__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Public_Holiday_Calendar__c</fullName>
    <label>Public Holiday Calendar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>