force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Purchase_Order_Number__c</fullName>
    <label>Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>