force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>