force-app/main/default/objects/tc9_imp__Imported_Assignment__c/fields/tc9_imp__Success__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>