force-app/main/default/objects/tc9_imp__Imported_Assignment__c/listViews/tc9_imp__All.listView-meta.xml
<ListView>
    <fullName>tc9_imp__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_imp__Record_Type__c</columns>
    <columns>tc9_imp__Imported_Record__c</columns>
    <columns>tc9_imp__Success__c</columns>
    <columns>tc9_imp__Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>